# llm_alpha_mini

./: README.md  pyproject.toml
llm_alpha_mini/dialogue_manager/: dialogue_manager.py
llm_alpha_mini/llm/: __init__.py  gemini.py  llm.py
llm_alpha_mini/tasks/: __init__.py  gesture_tasks.py  motion_available.py  registry.py  say_tasks.py  task.py
scripts/: gemini_only.py  main.py
