[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-alpha-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpha-mini-rug>=0.7.0",
        "google-genai>=1.11.0",
	]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_alpha_mini*"]
